reduce z-index of badges red background to avoid summarybar overlaping

--- a/src/components/SummaryBar/SummaryBar.css
+++ b/src/components/SummaryBar/SummaryBar.css
@@ -73,7 +73,7 @@
 }
 
 .redBackgroup {
-  z-index: 10;
+  z-index: 1;
   bottom: 0;
   right: 0;
   position: absolute;
